# hazkey

./: .gitmodules  README.md
.github/workflows/: build.yml
fcitx5-hazkey/: CMakeLists.txt
fcitx5-hazkey/src/: hazkey-addon.conf.in.in  hazkey-im.conf.in  hazkey_engine.cpp  hazkey_engine.h  hazkey_server_connector.cpp  hazkey_server_connector.h  hazkey_state.cpp
hazkey-server/: .gitignore  CMakeLists.txt  Package.resolved  Package.swift  build_swift.cmake  hazkey-server.sh.in
hazkey-server/Sources/hazkey-server/: config.swift  constants.swift.in  main.swift  path.swift.in  processManager.swift  protocolHandler.swift  server.swift  socketManager.swift  state.swift
hazkey-server/Sources/hazkey-server/Protocol/: base.pb.swift  commands.pb.swift
hazkey-settings/: CMakeLists.txt  constants.h.in  hazkey-settings.desktop.in  hazkey-settings_ja_JP.ts  main.cpp  mainwindow.cpp  mainwindow.h  serverconnector.cpp  serverconnector.h
hazkey-settings/controllers/: about_tab_controller.cpp  about_tab_controller.h  ai_tab_controller.cpp  ai_tab_controller.h  conversion_tab_controller.cpp  conversion_tab_controller.h  dictionary_tab_controller.cpp  dictionary_tab_controller.h  dual_list_controller.cpp  dual_list_controller.h  input_style_tab_controller.cpp  input_style_tab_controller.h  tab_context.h  user_interface_tab_controller.cpp  user_interface_tab_controller.h  warning_widget_factory.cpp  warning_widget_factory.h
protocol/: base.proto  commands.proto
